# rudis

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/lifecycle/: construct.rs  initialize.rs  lifecycle.rs  mod.rs  start.rs  stop.rs
docs/development journal/: eventloop-zh.md  eventloop.md
resp/: Cargo.toml
resp/src/: lib.rs  parse.rs  protocol.rs
server/: Cargo.toml
server/src/: ae.rs  ae_mio.rs  client.rs  connection.rs  main.rs  server.rs
server/src/command/: mod.rs  ping.rs  unknown.rs
server/src/eventloop/: event.rs  eventloop.rs  io_event.rs  mio_event_manager.rs  mod.rs  time_event.rs
src/: main.rs
