workspace = { members = ["core", "resp", "server"] }
[package]
name = "rudis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = {version = "1.38.1", features = ["net", "time"]}
bytes = "1.0"
log = "0.4.22"
